Converted to new Markdown syntax!

--- a/journals/2021_05_02.md
+++ b/journals/2021_05_02.md
@@ -2,11 +2,11 @@
 title: May 2nd, 2021
 ---
 
-## Starting point
-### area _ project _ daily
-### Areas
-####
-### Projects
-####
-### template
-##
+- Starting point
+	- area _ project _ daily
+	- Areas
+		-
+	- Projects
+		-
+	- template
+-
