--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -1,97 +1,98 @@
 ---
 title: May 4th, 2021
 ---
-## Breaking down my tasks
- Micard atomic steps
-#### Open vscodium
-#### Open inline terminal
-#### Start Flutter emulator
-#### shortcut to next workspace
-#### open firefox
-#### Open udemy flutter bootcamp
-#### Navigate to {next.lesson}
-#### Open lesson as pictire in picture
-###
-#### Move that floating window to vscodium workspace
-### Ramdan Night Atomic Steps
-#### Isha'a
-##### Do Wudu
-##### Put on Masah
-##### Put on jeans, sweatshirt
-##### Go out
-##### Buy ice-cream on the way
-#### Tashahhud
-##### wake up 3:20 am
-##### take Wudu even if cold
-##### Quick Salah
-##### Suhoor
-##### Reminder
-### Atomic tasks when making Insta posts
-#### Research content ideas
-#### Write basic idea behind it
-#### Write a story from it
-#### break into caption and slides
-#### Write the slide caption
-#### Make mockup carousel
-#### Acquire all design assets
-#### Polish the carousel
-#### Add some captions
-#### Schedule the posts
-## Taking code notes #capture
-### It's better to make a simple project on one lesson at a time
-### A notebook or repo on github
-### That's why I'll make a personal projects
-### Each implements a lesson from every module
-## Earn points until you reach a point to can join premium level groups 
-#capture #[[app idea]]
-### If Mentorship was totally free online than It'll make it harder to dedicate time to every one
-### We may note help those who are serious about the deen
-### compared to those who don't need the direct contact
-### **This topic need for research**
-## Three wishes I want #reflect
-### Access to like minded English speaking people
-#### I feel inspired and understood when talking with those who share the same values and interests as I am.
-#### Having my projects and ideas validated motivates my creative mind
-#### Learning my shortcomings when I get constructive criticisms from more experienced individuals
-### Live in open an environment for personal growth
-#### I feel the freedom to focus on my values
-#### I feel awesome when I can enter the flow state and accomplish many things
-#### I feel in peace when I can shut my brain and just be in the moment
-#### Not being in rush
-### Start an organization that encourages living the best version of yourself
-#### I feel motivated when I can change somebodies life for the better'
-#### I feel being part of the community when working with a team towards a common goal
-## Three wishes #reflect
-### Live in open an environment for personal growth
-#### A cafe, coworking
-##### location that gives me space to enter my creative flow
-##### Have online meetings with clients
-#### Events, workshops, conventions, offline courses
-##### Meet with like minded people
-##### Meet with individuals who are smarter (Elon, Gary)
-##### Learn new things in a memorable manner
-#### Beach, forest, park, spa
-##### Relaxing atmosphere to wash away my worries
-##### A place to reflect on my day or goals
-##### Have fun
-### Start an organization that encourages living the best version of yourself
-##### Interactive apps that Muslims use in their daily lives
-###### To-do app with optional to choose Salah time
-###### Quran & Hadith note taking research app for Muslim scholars and students
-###### Platform to help Muslims learn Islamic knowledge in a group setting 
-(cohort system?)
-##### Next level educational content
-###### Breaking complex concepts into simple ones for a laymen person
-###### Making accomplishing goals like waking up for Salah or doing Tashahhud easier for the wider community
-## Wait what ARE my principle values?
-### Persue barakah lifestyle
-### Build Innovative solutions
-### making thought leader content
-## I have my time guaranteed | #capture #moment
-### After work
-### during OBED
-### Before waking up if 6:30
-## What I do
-### story agency
-### web dev skills
-### Better living
+
+- Breaking down my tasks
+   Micard atomic steps
+		- Open vscodium
+		- Open inline terminal
+		- Start Flutter emulator
+		- shortcut to next workspace
+		- open firefox
+		- Open udemy flutter bootcamp
+		- Navigate to {next.lesson}
+		- Open lesson as pictire in picture
+	-
+		- Move that floating window to vscodium workspace
+	- Ramdan Night Atomic Steps
+		- Isha'a
+			- Do Wudu
+			- Put on Masah
+			- Put on jeans, sweatshirt
+			- Go out
+			- Buy ice-cream on the way
+		- Tashahhud
+			- wake up 3:20 am
+			- take Wudu even if cold
+			- Quick Salah
+			- Suhoor
+			- Reminder
+	- Atomic tasks when making Insta posts
+		- Research content ideas
+		- Write basic idea behind it
+		- Write a story from it
+		- break into caption and slides
+		- Write the slide caption
+		- Make mockup carousel
+		- Acquire all design assets
+		- Polish the carousel
+		- Add some captions
+		- Schedule the posts
+- Taking code notes #capture
+	- It's better to make a simple project on one lesson at a time
+	- A notebook or repo on github
+	- That's why I'll make a personal projects
+	- Each implements a lesson from every module
+- Earn points until you reach a point to can join premium level groups 
+  #capture #[[app idea]]
+	- If Mentorship was totally free online than It'll make it harder to dedicate time to every one
+	- We may note help those who are serious about the deen
+	- compared to those who don't need the direct contact
+	- **This topic need for research**
+- Three wishes I want #reflect
+	- Access to like minded English speaking people
+		- I feel inspired and understood when talking with those who share the same values and interests as I am.
+		- Having my projects and ideas validated motivates my creative mind
+		- Learning my shortcomings when I get constructive criticisms from more experienced individuals
+	- Live in open an environment for personal growth
+		- I feel the freedom to focus on my values
+		- I feel awesome when I can enter the flow state and accomplish many things
+		- I feel in peace when I can shut my brain and just be in the moment
+		- Not being in rush
+	- Start an organization that encourages living the best version of yourself
+		- I feel motivated when I can change somebodies life for the better'
+		- I feel being part of the community when working with a team towards a common goal
+- Three wishes #reflect
+	- Live in open an environment for personal growth
+		- A cafe, coworking
+			- location that gives me space to enter my creative flow
+			- Have online meetings with clients
+		- Events, workshops, conventions, offline courses
+			- Meet with like minded people
+			- Meet with individuals who are smarter (Elon, Gary)
+			- Learn new things in a memorable manner
+		- Beach, forest, park, spa
+			- Relaxing atmosphere to wash away my worries
+			- A place to reflect on my day or goals
+			- Have fun
+	- Start an organization that encourages living the best version of yourself
+			- Interactive apps that Muslims use in their daily lives
+				- To-do app with optional to choose Salah time
+				- Quran & Hadith note taking research app for Muslim scholars and students
+				- Platform to help Muslims learn Islamic knowledge in a group setting 
+				  (cohort system?)
+			- Next level educational content
+				- Breaking complex concepts into simple ones for a laymen person
+				- Making accomplishing goals like waking up for Salah or doing Tashahhud easier for the wider community
+- Wait what ARE my principle values?
+	- Persue barakah lifestyle
+	- Build Innovative solutions
+	- making thought leader content
+- I have my time guaranteed | #capture #moment
+	- After work
+	- during OBED
+	- Before waking up if 6:30
+- What I do
+	- story agency
+	- web dev skills
+	- Better living
