--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -2,22 +2,22 @@
 title: May 12th, 2021
 ---
 
-## Brand thoughts
-### My brand content topics
-#### Marketing - why keeping it simple and avoiding complexity is good #capture
-#### Content - How educational content helps your reputation #capture
-#### Community - How to be open and approachable to build a community #capture
-### What I do
-#### I help health brands grow and build their communities
-##### Couches, fitness, healthy products, etc
-#### Helping content creators be output productive with simple systems
-## Show don't tell
-### I notice that a lot of people share content with bullet points #capture
-#### My personal opinion
-#### They rarely make sence in practice
-#### Harder to visualise in the real world
-## Zettl app ideas
-### AI assisted note categorization #capture #[[app idea]] #[[zettl app]]
-#### Like evernote, have ai assist in makong it easy to search for notes
-#### Like mimind auto tag the note
-#### Use graph AI with nlp to better understand what tags to use
+- Brand thoughts
+	- My brand content topics
+		- Marketing - why keeping it simple and avoiding complexity is good #capture
+		- Content - How educational content helps your reputation #capture
+		- Community - How to be open and approachable to build a community #capture
+	- What I do
+		- I help health brands grow and build their communities
+			- Couches, fitness, healthy products, etc
+		- Helping content creators be output productive with simple systems
+- Show don't tell
+	- I notice that a lot of people share content with bullet points #capture
+		- My personal opinion
+		- They rarely make sence in practice
+		- Harder to visualise in the real world
+- Zettl app ideas
+	- AI assisted note categorization #capture #[[app idea]] #[[zettl app]]
+		- Like evernote, have ai assist in makong it easy to search for notes
+		- Like mimind auto tag the note
+		- Use graph AI with nlp to better understand what tags to use
