--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -2,72 +2,66 @@
 title: May 13th, 2021
 ---
 
-## Keep your message simple and straight to the point
-:PROPERTIES:
-:id: 609cb7a2-7057-4cb8-966d-fe164044fab0
-:END:
-### {{embed ((609bc98b-c273-49c7-8f68-5b30330d53d9)) }}
-### v1 #capture #[[insta content]]
-#### Apple vs other brands
-## Use a representative to do thy bidding
-:PROPERTIES:
-:id: 609cfebc-721b-4a26-951a-39a77fd5cbdb
-:END:
-### engadget, linus tech tips, linus review
-### v1 #capture #[[insta content]]
-#### Let somebody do thy bidding
-:PROPERTIES:
-:id: 609cfebc-c3c3-410c-a6e8-b516d2b5f512
-:END:
-#### Ever wanted to gain the same amount of engagement as personal brands?
-#### Find a representative!
-#### What do these brands have in common?
-##### - one dollar shave club, linus tech review, engadget
-#### You guessed it, a representative
-##### -
-#### They handle all the interaction with your audience
-#### while your team can focus on making better products
-#### A representative needs a personality, it could be your marketing buddy
-#### Or it can even be you!
-## Know thy audience
-###
-### v1 #capture #[[insta content]]
-#### I initially started with ((609cb7a2-7057-4cb8-966d-fe164044fab0))
-#### Than I realized it's not what my audience needs
-#### Health and smartphones?
-#### Instead I thoughts what would a fitness couch want? or a Eco product brand be interested in?
-#### An eco product?
-#### Every ecommerce has trouble being authantic.
-#### Personal brands blow them away in engagement and growth.
-#### What to do?
-#### Use a representative!
-#### That's how my posts was made
-## Backlinks in sketch note
-### Idea #capture #[[app idea]]
-#### sync tagged images to the tag within the zettl app
-#### all sketches are shown within the tag pages
-#### How?
-##### v1 - parallel to the main content body but not in sidebar
-##### THIS -> v2 - mixed with notes, everything ordered by date
-###### An icon to show from what app everything is show
-### I can capture notes but what about sketches?
-### I want to have a way to have the backlink power in my sketching app
-### The ability to organise notes with backlinks and tags is powerful
-### My workflow
-#### note
-##### just capture ideas in daily journal
-##### than see all the results in the capture tag with filtering
-##### insta content, app ideas, etc
-#### images
-##### just tagging them seems to work...
-##### Just tag with the type - insta, Yt, etc
-##### than add the post name to remmember by
-##### every sketch will be used for that only
-##### Now I feel silly
-## Dad's work
-### one
-#### изготовление полистиролбетона
-#### размеры - 60x30x20, 60x30x10
-#### Работаем без выходных
-#### образци/консультация - бесплатно
-##
+- Keep your message simple and straight to the point
+  id:: 609cb7a2-7057-4cb8-966d-fe164044fab0
+	- {{embed ((609bc98b-c273-49c7-8f68-5b30330d53d9)) }}
+	- v1 #capture #[[insta content]]
+		- Apple vs other brands
+- Use a representative to do thy bidding
+  id:: 609cfebc-721b-4a26-951a-39a77fd5cbdb
+	- engadget, linus tech tips, linus review
+	- v1 #capture #[[insta content]]
+		- Let somebody do thy bidding
+		  id:: 609cfebc-c3c3-410c-a6e8-b516d2b5f512
+		- Ever wanted to gain the same amount of engagement as personal brands?
+		- Find a representative!
+		- What do these brands have in common?
+			- - one dollar shave club, linus tech review, engadget
+		- You guessed it, a representative
+			- -
+		- They handle all the interaction with your audience
+		- while your team can focus on making better products
+		- A representative needs a personality, it could be your marketing buddy
+		- Or it can even be you!
+- Know thy audience
+	-
+	- v1 #capture #[[insta content]]
+		- I initially started with ((609cb7a2-7057-4cb8-966d-fe164044fab0))
+		- Than I realized it's not what my audience needs
+		- Health and smartphones?
+		- Instead I thoughts what would a fitness couch want? or a Eco product brand be interested in?
+		- An eco product?
+		- Every ecommerce has trouble being authantic.
+		- Personal brands blow them away in engagement and growth.
+		- What to do?
+		- Use a representative!
+		- That's how my posts was made
+- Backlinks in sketch note
+	- Idea #capture #[[app idea]]
+		- sync tagged images to the tag within the zettl app
+		- all sketches are shown within the tag pages
+		- How?
+			- v1 - parallel to the main content body but not in sidebar
+			- THIS -> v2 - mixed with notes, everything ordered by date
+				- An icon to show from what app everything is show
+	- I can capture notes but what about sketches?
+	- I want to have a way to have the backlink power in my sketching app
+	- The ability to organise notes with backlinks and tags is powerful
+	- My workflow
+		- note
+			- just capture ideas in daily journal
+			- than see all the results in the capture tag with filtering
+			- insta content, app ideas, etc
+		- images
+			- just tagging them seems to work...
+			- Just tag with the type - insta, Yt, etc
+			- than add the post name to remmember by
+			- every sketch will be used for that only
+			- Now I feel silly
+- Dad's work
+	- one
+		- изготовление полистиролбетона
+		- размеры - 60x30x20, 60x30x10
+		- Работаем без выходных
+		- образци/консультация - бесплатно
+-
