--- a/journals/2021_05_16.md
+++ b/journals/2021_05_16.md
@@ -2,22 +2,20 @@
 title: May 16th, 2021
 ---
 
-## app research
-### create listview from an array
-### use firebase as a database
-## Now I just gotta prototype designs for my post
-## Added variabale to Dicee
-### #progress #capture in [[Flutter Bootcamp]]
-#### lesson 55 - making dice image change reactively
-#### just added variable
-#### and how changing it changes the image!
-## Nested arrays in zettl
-### Use arrays to store text string #capture #[[app idea]]
-#### Store bullets in arrays
-#### have nested arrays for nested bullets
-#### Use listview builder recursively to create nested widgets
-## 
-:PROPERTIES:
-:todo: 1621407574361
-:later: 1621407565862
-:END:
+- app research
+	- create listview from an array
+	- use firebase as a database
+- Now I just gotta prototype designs for my post
+- Added variabale to Dicee
+	- #progress #capture in [[Flutter Bootcamp]]
+		- lesson 55 - making dice image change reactively
+		- just added variable
+		- and how changing it changes the image!
+- Nested arrays in zettl
+	- Use arrays to store text string #capture #[[app idea]]
+		- Store bullets in arrays
+		- have nested arrays for nested bullets
+		- Use listview builder recursively to create nested widgets
+-
+  todo:: 1621407574361
+  later:: 1621407565862
