--- a/journals/2021_05_17.md
+++ b/journals/2021_05_17.md
@@ -2,45 +2,43 @@
 title: May 17th, 2021
 ---
 
-## Brand Styles
-### Fun posts and technical posts #capture #[[insta brand]]
-#### My health growth brand is all fun and exciting
-##### Best representation - Pinkie pie character
-##### Inspirations
-###### https://www.instagram.com/thechristosnikas/
-###### https://www.instagram.com/vahursinga/
-###### https://www.instagram.com/dainwalker/
-#### My content creation brand is practical and straight to the point #capture #[[insta brand]]
-##### Best representation - Shu Omi the youtuber
-##### I share how to make content creation easy and systematized
-###### Using content pipelines
-####### zettl capture for content creation
-####### letting go and giving time for ideas to marinate
-#######
-###### Content creation tricks -> Don't treat your content as art
-####### Which is just a spin on ((60a28bae-02b1-4f51-a9eb-b015d5033115))
-##### Inspirations
-###### https://www.instagram.com/theharryneedham/
-###### https://www.instagram.com/gev_balyan/
-## My content boundries
-### I value educational posts #capture #[[insta brand]]
-#### https://www.instagram.com/marketingharry/
-##### Has a lot of self promotion...
-##### Unnecessary pictures of himself. I prefer to detach the person from the content at the start
-#### https://www.instagram.com/thechristosnikas/
-##### Content over selling
-##### Value packed content and it's FUN!
-## Ux is not art
-:PROPERTIES:
-:id: 60a28bae-02b1-4f51-a9eb-b015d5033115
-:END:
-### ![2021_05_17_2021-05-17_21-34.png](https://cdn.logseq.com/%2Fcee4eb30-69f5-47b6-8491-6aaad1269b5769569e9f-c652-4458-b034-652d39d0504f2021_05_17_2021-05-17_21-34.png?Expires=4774865770&Signature=InAHI-jl~7WhsW-n-GwQf81WcpQ5w0XMQDlVww32zD0DUjXhBAZ8uF3k-o724~SiwjIEIks-SUcu6M6aiPGZT6JTNNwocdGiUb9QwQQkr~4Wyycc3dP7YIpVN5aq01X5TIMthe0ol-okLACKVf~NIkU94JhmCN8LZJpkyA8VS-mrD5iKYlR9ubDm5v9W6UQ7slWc~ZDRN1jqUT2S9q6728hOUzGAeoNwsEVTxFk2sn9nBOGsS~g7BWb9MYQElckAtgnNgr-07RwsDr0qajIX8BGOUMyktvwypfc9dShAwx27OoD-DFR6zn482Jwh~4FdmiWfJoSvWIwc7LEkZP6Vbg__&Key-Pair-Id=APKAJE5CCD6X7MP6PTEA) #capture #[[insta content]]
-### This guys: https://www.instagram.com/searckey_/
-### This too: https://www.instagram.com/searckey_/
-#### The focus is redirected from the content to the pictures
-#### Losing the processing to admiring the pictures
-#### My expirience
-#### Will need more research
-### I judging based on their follower count
-#### I know that doesn't matter
-#### But I still have this feeling left
+- Brand Styles
+	- Fun posts and technical posts #capture #[[insta brand]]
+		- My health growth brand is all fun and exciting
+			- Best representation - Pinkie pie character
+			- Inspirations
+				- https://www.instagram.com/thechristosnikas/
+				- https://www.instagram.com/vahursinga/
+				- https://www.instagram.com/dainwalker/
+		- My content creation brand is practical and straight to the point #capture #[[insta brand]]
+			- Best representation - Shu Omi the youtuber
+			- I share how to make content creation easy and systematized
+				- Using content pipelines
+					- zettl capture for content creation
+					- letting go and giving time for ideas to marinate
+					-
+				- Content creation tricks -> Don't treat your content as art
+					- Which is just a spin on ((60a28bae-02b1-4f51-a9eb-b015d5033115))
+			- Inspirations
+				- https://www.instagram.com/theharryneedham/
+				- https://www.instagram.com/gev_balyan/
+- My content boundries
+	- I value educational posts #capture #[[insta brand]]
+		- https://www.instagram.com/marketingharry/
+			- Has a lot of self promotion...
+			- Unnecessary pictures of himself. I prefer to detach the person from the content at the start
+		- https://www.instagram.com/thechristosnikas/
+			- Content over selling
+			- Value packed content and it's FUN!
+- Ux is not art
+  id:: 60a28bae-02b1-4f51-a9eb-b015d5033115
+	- ![2021_05_17_2021-05-17_21-34.png](https://cdn.logseq.com/%2Fcee4eb30-69f5-47b6-8491-6aaad1269b5769569e9f-c652-4458-b034-652d39d0504f2021_05_17_2021-05-17_21-34.png?Expires=4774865770&Signature=InAHI-jl~7WhsW-n-GwQf81WcpQ5w0XMQDlVww32zD0DUjXhBAZ8uF3k-o724~SiwjIEIks-SUcu6M6aiPGZT6JTNNwocdGiUb9QwQQkr~4Wyycc3dP7YIpVN5aq01X5TIMthe0ol-okLACKVf~NIkU94JhmCN8LZJpkyA8VS-mrD5iKYlR9ubDm5v9W6UQ7slWc~ZDRN1jqUT2S9q6728hOUzGAeoNwsEVTxFk2sn9nBOGsS~g7BWb9MYQElckAtgnNgr-07RwsDr0qajIX8BGOUMyktvwypfc9dShAwx27OoD-DFR6zn482Jwh~4FdmiWfJoSvWIwc7LEkZP6Vbg__&Key-Pair-Id=APKAJE5CCD6X7MP6PTEA) #capture #[[insta content]]
+	- This guys: https://www.instagram.com/searckey_/
+	- This too: https://www.instagram.com/searckey_/
+		- The focus is redirected from the content to the pictures
+		- Losing the processing to admiring the pictures
+		- My expirience
+		- Will need more research
+	- I judging based on their follower count
+		- I know that doesn't matter
+		- But I still have this feeling left
