--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -2,57 +2,57 @@
 title: May 19th, 2021
 ---
 
-## Keeping it under 3 min - roam scholarship
-### #brainstorming
-#### just started a career in insta brand
-##### I want to help health brands grow online
-##### Design as a side gig
-##### just recently made it as serious income
-##### I have the pipeline
-#### Zettl centric
-##### Content creation system
-##### Share ways to grow online
-#### Build am ai assisted zettl app
-##### Flutter let's you easily add edge ai models
-### Final Script
-#### Quick intro - {{name}} & {{age}} student (no more)
-#### problems I'm solving
-##### Help brands grow online with educational content
-###### Fun introduction to though leader strategy
-###### In-depth look into content pipeline
-##### Build ai assisted networked note app.
-## Create a Twitter account
-### I'm thinking to keep up to date to #capture #thoughts
-#### roam accounts
-##### https://twitter.com/gideonesakoff
-##### https://twitter.com/Conaw
-##### https://twitter.com/RoamResearch
-##### https://twitter.com/CultRoam
-##### https://twitter.com/RoamPublic
-##### https://twitter.com/solimans
-#### Ai accounts
-## [[Watch later]]
-### Roam's founder goals #capture
-#### https://www.loom.com/share/53eb0b93b2444ef899c2c48a37317cd1
-## App stack
-### App stack #capture #thoughts
-#### Air audio app - podcasts
-#### readwise - digest
-#### roam research - networked thoughts
-## Quran Zettl
-### Good roam implementation of quran studies #capture #[[app idea]]
-#### https://roamresearch.com/#/app/quran-public/page/LJzvk8EO4
-#### https://roamresearch.com/#/app/quran-graph/page/xLEID8Qzv
-## positive thinking
-### I've noticed something recently #capture #thoughts
-#### I am a bit more invlined towards negative thinking
-##### expecting bad things
-##### 'planning' debates with other
-#### it's started as a means to protect myself from negative change
-#### now It's more conditioned
-#### I intend to change that
-##### Be more inclined to think positively
-##### Not mind other people's actions
-##### Not mind other's opinions,
-###### especially during Ibada
-###### only between me and Allah
+- Keeping it under 3 min - roam scholarship
+	- #brainstorming
+		- just started a career in insta brand
+			- I want to help health brands grow online
+			- Design as a side gig
+			- just recently made it as serious income
+			- I have the pipeline
+		- Zettl centric
+			- Content creation system
+			- Share ways to grow online
+		- Build am ai assisted zettl app
+			- Flutter let's you easily add edge ai models
+	- Final Script
+		- Quick intro - {{name}} & {{age}} student (no more)
+		- problems I'm solving
+			- Help brands grow online with educational content
+				- Fun introduction to though leader strategy
+				- In-depth look into content pipeline
+			- Build ai assisted networked note app.
+- Create a Twitter account
+	- I'm thinking to keep up to date to #capture #thoughts
+		- roam accounts
+			- https://twitter.com/gideonesakoff
+			- https://twitter.com/Conaw
+			- https://twitter.com/RoamResearch
+			- https://twitter.com/CultRoam
+			- https://twitter.com/RoamPublic
+			- https://twitter.com/solimans
+		- Ai accounts
+- [[Watch later]]
+	- Roam's founder goals #capture
+		- https://www.loom.com/share/53eb0b93b2444ef899c2c48a37317cd1
+- App stack
+	- App stack #capture #thoughts
+		- Air audio app - podcasts
+		- readwise - digest
+		- roam research - networked thoughts
+- Quran Zettl
+	- Good roam implementation of quran studies #capture #[[app idea]]
+		- https://roamresearch.com/#/app/quran-public/page/LJzvk8EO4
+		- https://roamresearch.com/#/app/quran-graph/page/xLEID8Qzv
+- positive thinking
+	- I've noticed something recently #capture #thoughts
+		- I am a bit more invlined towards negative thinking
+			- expecting bad things
+			- 'planning' debates with other
+		- it's started as a means to protect myself from negative change
+		- now It's more conditioned
+		- I intend to change that
+			- Be more inclined to think positively
+			- Not mind other people's actions
+			- Not mind other's opinions,
+				- especially during Ibada
+				- only between me and Allah
