--- a/journals/2021_05_03.md
+++ b/journals/2021_05_03.md
@@ -2,14 +2,14 @@
 title: May 3rd, 2021
 ---
 
-## Talk with dad
-### Children remind me of myself
-### This work is what I need to do
-#### It keeps me from falling to bad habits
-#### Like watching youtube while giggling
-#### I am angry because I feel you want to subotage my work for your own gain
-### Let me have 4 hour of work
-#### Send proposals
-#### Learn code
-#### Design posts
-##
+- Talk with dad
+	- Children remind me of myself
+	- This work is what I need to do
+		- It keeps me from falling to bad habits
+		- Like watching youtube while giggling
+		- I am angry because I feel you want to subotage my work for your own gain
+	- Let me have 4 hour of work
+		- Send proposals
+		- Learn code
+		- Design posts
+-
