Logseq auto save

--- a/journals/2021_07_03.md
+++ b/journals/2021_07_03.md
@@ -1,1 +1,4 @@
-- Why brand get away with
+- Why brand get away with higher prices
+	- trust
+	- You trust that they will deliver on their promise
+		-
