Logseq auto save

--- a/journals/2021_07_03.md
+++ b/journals/2021_07_03.md
@@ -1,4 +1,7 @@
 - Why brand get away with higher prices
 	- trust
 	- You trust that they will deliver on their promise
-		-
+		- service
+		- delivery
+		- expirience
+	- It's better than an unown product from 3rd party amazon company
