Logseq auto save

--- a/journals/2021_07_03.md
+++ b/journals/2021_07_03.md
@@ -4,4 +4,4 @@
 		- service
 		- delivery
 		- expirience
-	- It's better than an unown product from 3rd party amazon company
+	- It's better than an unknown product from a 3rd party company
