Logseq auto save

--- a/journals/2021_07_03.md
+++ b/journals/2021_07_03.md
@@ -5,3 +5,8 @@
 		- delivery
 		- expirience
 	- It's better than an unknown product from a 3rd party company
+- brand
+	- never run out of ideas
+	- name
+		- yourpalomar
+		- theideacrafter
